k8s/kv-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kv-deployment
  labels:
    app: kv-svc
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: kv-svc
  template:
    metadata:
      labels:
        app: kv-svc
    spec:
      containers:
      - name: kv-svc
        image: ameydev/kv-svc:v1
        ports:
        - containerPort: 10000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10000
---
apiVersion: v1
kind: Service
metadata:
  name: kv-svc
spec:
  ports:
  - port: 10000
    targetPort: 10000
  selector:
    app: kv-svc
